--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "leaked-handles",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Detect any handles leaked in node",
   "keywords": [],
   "author": "Raynos <raynos2@gmail.com>",
@@ -11,11 +11,12 @@
     "url": "https://github.com/Raynos/leaked-handles/issues",
     "email": "raynos2@gmail.com"
   },
-  "contributors": [{
-    "name": "Raynos"
-  }],
-  "dependencies": {
-  },
+  "contributors": [
+    {
+      "name": "Raynos"
+    }
+  ],
+  "dependencies": {},
   "devDependencies": {
     "tape": "^2.12.3",
     "jshint": "^2.5.0",
@@ -25,10 +26,12 @@
     "coveralls": "^2.10.0",
     "run-browser": "^1.3.0"
   },
-  "licenses": [{
-    "type": "MIT",
-    "url": "http://github.com/Raynos/leaked-handles/raw/master/LICENSE"
-  }],
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "http://github.com/Raynos/leaked-handles/raw/master/LICENSE"
+    }
+  ],
   "scripts": {
     "test": "npm run jshint -s && NODE_ENV=test node test/index.js | tap-spec",
     "unit-test": "NODE_ENV=test node test/index.js | tap-spec",
