--- a/package.json
+++ b/package.json
@@ -20,11 +20,8 @@
   "devDependencies": {
     "tape": "^2.12.3",
     "jshint": "^2.5.0",
-    "istanbul": "^0.2.7",
     "tap-spec": "^0.1.8",
-    "pre-commit": "0.0.5",
-    "coveralls": "^2.10.0",
-    "run-browser": "^1.3.0"
+    "pre-commit": "0.0.5"
   },
   "licenses": [
     {
@@ -33,7 +30,7 @@
     }
   ],
   "scripts": {
-    "test": "npm run jshint -s && NODE_ENV=test node test/index.js | tap-spec",
+    "test": "NODE_ENV=test node test/index.js | tap-spec",
     "unit-test": "NODE_ENV=test node test/index.js | tap-spec",
     "jshint-pre-commit": "jshint --verbose $(git diff --cached --name-only | grep '\\.js$')",
     "jshint": "jshint --verbose .",
